feat: use jlink rather than jdk
Signed-off-by: Yoan Blanc <yblanc@edgelab.ch>